--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                    <h3>Get Hulu, Disney+, and ESPN+ starting at $13.99/month</h3>
             </box>
             <box>
-                    <a href="https://www.hulu.com/disney-bundle-3"><button type="button" class="bundleButton">GET BUNDLE
+                    <a href="https://www.hulu.com/disney-bundle-3" target="_blank"><button type="button" class="bundleButton">GET BUNDLE
                     </button></a>
                     <p id="two">
                         <a href=https://www.hulu.com/terms/disney-bundle>Terms apply</a>
