--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class= "one"> 
             <nav>
                 <button type= "button" class="loginButton">LOG IN
-                    <a href="https://www.hulu.com/welcome"></a>
+                    <a href="https://www.hulu.com/welcome" target="_blank"></a>
                 </button>
              </nav> 
              </br>  
@@ -20,7 +20,7 @@
                 <p style= "color: white">Watch thousands of shows and movies, with plans starting at $5.99/month.</p>
                 <p style="color:white;">HBO Max, SHOWTIME, CINEMAX, and STARZ available as add-ons.</p>
                 <button type="button" class="trialButton">START YOUR FREE TRIAL
-                <a href="https://signup.hulu.com/plans"></a>
+                <a href="https://signup.hulu.com/plans" target="_blank"></a>
                 </button>
                 <p style="color:white;">Free trial for new & eligible returning subscribers only</p>
         </div>   
@@ -36,7 +36,7 @@
                     <a href="https://www.hulu.com/disney-bundle-3" target="_blank"><button type="button" class="bundleButton">GET BUNDLE
                     </button></a>
                     <p id="two">
-                        <a href=https://www.hulu.com/terms/disney-bundle>Terms apply</a>
+                        <a href="https://www.hulu.com/terms/disney-bundle" target="_black">Terms apply</a>
                     </p>
             </box>
         </div> 
